Fixed weird spacing bug
But now it is in HTML code....

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -22,25 +22,3 @@ nav {
     margin-right: 1.5em;
   }
 
-  .bold-text {
-    font-weight: bold;
-  }
-  
-  
-  
-  
-  Ivan Chew
-  nothing needs to be changed here? <body>
-      <!-- Top nav bar (fixed) -->
-      <nav>
-        <span>tweeter</span>
-        <div class="new-tweet">
-          <span>Write a new tweet</span>
-        </div>
-      </nav>
-  No, the HTML code you provided is correct for displaying a navigation bar with the "tweeter" logo on the left and "Write a new tweet" text on the right.
-  
-  
-  
-  
-  
